[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/MainMenu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/MenuCommon/MenuCommon.gd" type="Script" id=2]
[ext_resource path="res://Menu/MenuSkirmishNewGame/MenuSkirmishNewGame.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/3DBackground/3DBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/MenuOptions/MenuOptions.tscn" type="PackedScene" id=5]

[node name="MenuCommon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3DBackground" parent="." instance=ExtResource( 4 )]

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="MenuSkirmishNewGame" parent="." instance=ExtResource( 3 )]

[node name="MenuOptions" parent="." instance=ExtResource( 5 )]
[connection signal="skirmish_menu_show" from="MainMenu/Buttons/Single Game" to="." method="_skirmish_menu_show"]
[connection signal="options_menu_show" from="MainMenu/Buttons/Options" to="." method="_options_menu_show"]
[connection signal="exit_game" from="MainMenu/Buttons/Exit Game" to="." method="_exit_game"]
[connection signal="back_to_menu" from="MenuSkirmishNewGame/VBoxContainer/ButtonBack" to="." method="_back_to_menu"]
[connection signal="back_to_menu" from="MenuOptions/Buttons/BackToMenu" to="." method="_back_to_menu"]

[editable path="MainMenu"]

[editable path="MenuSkirmishNewGame"]

[editable path="MenuOptions"]
